[Update]public/orders/complete.html.erb/ style記述をscssへ変更

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -251,6 +251,12 @@ footer {
   }
 }
 
+.complete-card {
+  width: 90%;
+  h1 {
+    margin: 0 auto;
+  }
+}
 
 .long-name {
   white-space: nowrap;
