--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row mt-5">
-    <div class="card m-2 text-dark p-3 mt-5 mx-auto" style="width: 90%;">
+    <div class="card complete-card m-2 text-dark p-3 mt-5 mx-auto">
       <div class="row">
-        <h1 style="margin: 0 auto;">注文完了</h1>
+        <h1>注文完了</h1>
       </div>
       <div class="row mb-5 m-3 mx-auto">
         <h4>ご注文ありがとうございました！</h4>
