--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,4 +1,4 @@
-<div class="contaner">
+<div class="container">
 <% if @order.order_status_i18n == "お客様不在" %>
   <div class="row">
     <div class="card order-show-card mx-auto p-3">
@@ -10,7 +10,6 @@
         <h5 class="row mt-3 text-dark">お手数ですが、店舗まで商品を受け取りに来てください。</h5>
       </div>
     </div>
-  </div>
   </div>
 <% end %>
   <div class="row mt-5">
