[Update]public/homes/faq.html.erb/ style記述をscssへ変更

--- a/app/views/public/homes/faq.html.erb
+++ b/app/views/public/homes/faq.html.erb
@@ -2,27 +2,27 @@
   <div class="row mt-5">
     <h3>FAQ</h3>
   </div>
-  <div class="row mt-3 card p-2 mx-auto" style="width: 95%;">
+  <div class="row mt-3 card faq-card  p-2 mx-auto">
     <h5>Q.注文した商品が届きません。</h5>
     <h5 class="text-success">A.承った注文を順番に準備しております。恐れ入りますがご自身の座席にて今しばらくお待ちください。</h5>
   </div>
-  <div class="row mt-3 card p-2 mx-auto" style="width: 95%;">
+  <div class="row mt-3 card faq-card p-2 mx-auto">
     <h5>Q.商品が到着する前に席を離れてしまい、現在の状況がわかりません。</h5>
     <h5 class="text-success">A.ログイン後にメニューバー→注文履歴をタップすることで現在の注文状況をお調べすることができます。</h5>
   </div>
-  <div class="row mt-3 card p-2 mx-auto" style="width: 95%;">
+  <div class="row mt-3 card faq-card p-2 mx-auto">
     <h5>Q.商品を再配達してほしいです。</h5>
     <h5 class="text-success">A.商品の再配達はできかねます。恐れ入りますが直接店舗まで商品を取りに来ていただきますようお願いいたします。<br>※メニューバー→注文履歴をタップ後、注文状況が『お客様不在』となっている方が対象です。</h5>
   </div>
-  <div class="row mt-3 card p-2 mx-auto" style="width: 95%;">
+  <div class="row mt-3 card faq-card p-2 mx-auto">
     <h5>Q.複数の店舗から商品を購入したいです。</h5>
     <h5 class="text-success">A.1度の注文で1つの店舗からしか購入できません。お手数ですが注文を完了してから再度注文をしていただきますようよろしくお願いいたします。</h5>
   </div>
-  <div class="row mt-3 card p-2 mx-auto" style="width: 95%;">
+  <div class="row mt-3 card faq-card p-2 mx-auto">
     <h5>Q.クレジットカードを持っていないので現金で購入したいです。</h5>
     <h5 class="text-success">A.こちらのアプリケーションでの支払い方法はクレジットカード限定となります。恐れ入りますが直接店舗での購入をお願いいたします。</h5>
   </div>
-  <div class="row mt-3 card p-2 mx-auto" style="width: 95%;">
+  <div class="row mt-3 card faq-card p-2 mx-auto">
     <h5>Q.メールアドレス、パスワードを忘れてしまいました</h5>
     <h5 class="text-success">A.こちらのアプリケーションはメールアドレス、パスワードの再設定はできかねます。お手数ですが再度会員登録をしていただきますようお願いいたします。</h5>
   </div>
