--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -28,7 +28,7 @@
       <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
     </div>
   </div>
-  <div class="row mt-5" style="justify-content: center;">
+  <div class="row btn-row mt-5">
     <%= f.submit "新規登録", class: "btn btnlog" %>
   </div>
   <% end %>
