--- a/app/views/admin/data_graphs/index.html.erb
+++ b/app/views/admin/data_graphs/index.html.erb
@@ -3,7 +3,5 @@
     <h2 class="bg-light">データ</h2>
     <%= column_chart @items.pluck(:name, :earning), xtitle: "商品名", ytitle: "売上数" %>
   </div>
-  <div class="row">
-    <h5 style="margin-bottom: 100px;"></h5>
-  </div>
+  <div class="page-under"></div>
 </div>
