--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -8,10 +8,10 @@
         <%= image_tag @item.get_image(300,300) %>
       </div>
       <div class="col-md-8">
-        <table class="table table-borderless">
+        <table class="table admin-item-show-table table-borderless">
           <tr>
-            <th width="20%">商品説明</th>
-            <td width="80%"><%= @item.explanation %></td>
+            <th>商品説明</th>
+            <td><%= @item.explanation %></td>
           </tr>
           <tr>
             <th>カテゴリー</th>
@@ -43,17 +43,15 @@
       </div>
     </div>
     <% if current_admin_store.owner_flag == false %>
-    <div class="row">
+    <div class="row admin-item-show-btn">
       <div class="col-md-3 offset-md-4">
-        <%= link_to "編集する", edit_admin_store_item_path(current_admin_store.id, @item.id), class: "btn btn-success", style: "width: 70%" %>
+        <%= link_to "編集する", edit_admin_store_item_path(current_admin_store.id, @item.id), class: "btn btn-success" %>
       </div>
       <div class="col-md-3">
-        <%= link_to "削除する", admin_store_item_path(current_admin_store.id, @item.id), method: :delete, class: "btn btn-danger", style: "width: 70%", data: {confirm: "削除しますか？"} %>
+        <%= link_to "削除する", admin_store_item_path(current_admin_store.id, @item.id), method: :delete, class: "btn btn-danger", data: {confirm: "削除しますか？"} %>
       </div>
     </div>
     <% end %>
   </div>
-  <div class="row">
-    <div style="margin-bottom: 100px;"></div>
-  </div>
+  <div class="page-under"></div>
 </div>
