[Update]admin/orders/ style記述をscssへ変更

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -78,7 +78,5 @@
       </table>
     </div>
   </div>
-  <div class="row">
-    <h5 style="margin-bottom: 100px;"></h5>
-  </div>
+  <div class="page-under"></div>
 </div>
