[Update]admin/stores/ style記述をscssへ変更

--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -28,7 +28,7 @@
     <h4 class="subtitle">販売商品一覧</h4>
   </div>
   <div class="row">
-    <table class="table table-border table-light  table-striped table-hover">
+    <table class="table table-border table-light table-striped table-hover">
       <thead>
         <th width="15%">商品画像</th>
         <th width="25%">商品名</th>
@@ -57,9 +57,7 @@
       <% end %>
     </table>
   </div>
-  <div class="row">
-    <h5 style="margin-bottom: 100px;"></h5>
-  </div>
+  <div class="page-under"></div>
   <% else %>
   <h1>管理人</h1>
   <% end %>
