--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -3,7 +3,7 @@
     <h2 class="bg-light">店舗一覧</h2>
   </div>
   <div class="row mt-3">
-    <table class="table table-border table-light  table-striped table-hover">
+    <table class="table table-border table-light table-striped table-hover">
       <thead>
         <th width="15%">店舗画像</th>
         <th width="35%">店舗名</th>
@@ -22,7 +22,5 @@
       <% end %>
     </table>
   </div>
-  <div class="row">
-    <h5 style="margin-bottom: 100px;"></h5>
-  </div>
+  <div class="page-under"></div>
 </div>
