--- a/app/views/public/homes/faq.html.erb
+++ b/app/views/public/homes/faq.html.erb
@@ -31,7 +31,5 @@
     <h4 class="mx-auto"><%= link_to "Top", root_path %></h5>
   <% end %>
   </div>
-  <div class="row">
-    <h5 style="margin-bottom: 100px;"></h5>
-  </div>
+  <div class="page-under"></div>
 </div>
