--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -62,7 +62,7 @@
       </tr>
     </table>
   </div>
-  <div class="card item-card mt-3 p-2 mx-auto">
+  <div class="card order-show-item-card mt-3 p-2 mx-auto">
     <div class="row">
     <% @order_details.each do |order_detail| %>
       <div class="card order-detail-card p-1 mt-1 mb-1 text-dark mx-auto">
