[Update]public/orders/error style記述をscssへ変更

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -299,6 +299,13 @@ footer {
   }
 }
 
+.error-card {
+  width: 90%;
+  .trouble {
+    width: 90%;
+  }
+}
+
 .complete-card {
   width: 90%;
   h1 {
