[Update]public/layouts/_footer style記述をscssへ変更

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -49,6 +49,10 @@ header {
 footer {
   position: absolute;
   bottom: 0;
+  .admin-footer {
+    height: 50px; 
+    background-color: #c22a1f;
+  }
   #sp-fixed-menu {
     background-color: #a6ce39;
     width: 100%;
