[Update]顧客トップページ背景画像変更

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,9 @@
 <header id="home">
   <h1 id="logo" class="w-100 text-center">
-      <a class="top-logo mx-auto" href="/">StadiumGourmet</a>
+    <div class="logo-container">
+      <a class="top-logo mx-auto" href="/">StadiumGourmet</a><br>
+      <a class="top-logo2" href="/">〜スタジアムグルメ〜</a>
+    </div>
   </h1>
   <nav id="menubar" class="w-100">
     <ul>
