--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -11,7 +11,7 @@ body {
 header {
   #home {
     height: 100vh;
-    background-image: url("../images/ball.jpg");
+    background-image: url("../images/baseball.jpg");
     background-size: cover;
     background-position: center;
     position: relative;
@@ -21,12 +21,22 @@ header {
     position: absolute;
 	  top: 20%;
   }
+  .logo-container {
+    width: 90%;
+    margin: 0 auto;
+    background-color: ivory;
+  }
   .top-logo {
     color: #a6ce39;
-    font-size: 1.5em;
+    font-size: 1.3em;
     font-family: 'Londrina Shadow', cursive;
     width: 100%;
     height: 10vh;
+    padding: 4px;
+  }
+  .top-logo2 {
+    color: #a6ce39;
+    font-size: 0.6em;
   }
   .head {
     width: 100%;
@@ -88,14 +98,14 @@ footer {
 
 #menubar {
 	position: absolute;
-	bottom: 15%;
+	bottom: 5%;
 	left: 0px;
 	ul {
 	  list-style: none;
 	  padding-left: 0;
 	  margin-left: 45%;
 	  a {
-	    color: #a6ce39;
+	    color: ivory;
 	  }
 	}
 }
