[Update]トップページ色変更

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -24,10 +24,10 @@ header {
   .logo-container {
     width: 90%;
     margin: 0 auto;
-    background-color: ivory;
+    background-color: seagreen;
   }
   .top-logo {
-    color: #a6ce39;
+    color: lime;
     font-size: 1.3em;
     font-family: 'Londrina Shadow', cursive;
     width: 100%;
@@ -35,7 +35,7 @@ header {
     padding: 4px;
   }
   .top-logo2 {
-    color: #a6ce39;
+    color: lime;
     font-size: 0.6em;
   }
   .head {
@@ -105,7 +105,7 @@ footer {
 	  padding-left: 0;
 	  margin-left: 45%;
 	  a {
-	    color: ivory;
+	    color: lime;
 	  }
 	}
 }
