--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -8,51 +8,76 @@ body {
   font-family: "You Gothic Medium", "游ゴシック Medium", "YuGothic", "游ゴシック体", "ヒラギノ角ゴ Pro W3", sans-seril;
 }
 
-header {
-  #home {
-    height: 100vh;
-    background-image: url("../images/baseball.jpg");
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    z-index: 9998;
-  }
+#home {
+  height: 100vh;
+  background-image: url("../images/baseball.jpg");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  z-index: 9998;
   #logo {
     position: absolute;
-	  top: 20%;
-  }
-  .logo-container {
-    width: 90%;
-    margin: 0 auto;
-    background-color: seagreen;
-  }
-  .top-logo {
-    color: lime;
-    font-size: 1.3em;
-    font-family: 'Londrina Shadow', cursive;
-    width: 100%;
-    height: 10vh;
-    padding: 4px;
-  }
-  .top-logo2 {
-    color: lime;
-    font-size: 0.6em;
-  }
-  .head {
-    width: 100%;
-    height: 50px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9998;
-    .header-logo {
-      color: #fff;
-      font-size: 50px;
-      font-family: 'Londrina Shadow', cursive;
-      text-align: center;
-      width: 100%;
-      line-height: 50px;
+    top: 20%;
+    .logo-container {
+      width: 90%;
+      margin: 0 auto;
+      background-color: seagreen;
+      .top-logo {
+        color: lime;
+        font-size: 1.3em;
+        font-family: 'Londrina Shadow', cursive;
+        width: 100%;
+        height: 10vh;
+        padding: 4px;
+      }
+      .top-logo2 {
+        color: lime;
+        font-size: 0.6em;
+      }
     }
+  }
+  #menubar {
+  	position: absolute;
+  	bottom: 5%;
+  	left: 0px;
+  	ul {
+  	  list-style: none;
+  	  padding-left: 0;
+  	  margin-left: 45%;
+  	  a {
+  	    color: lime;
+  	  }
+  	}
+  }
+}
+
+.admin-head {
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  .navbar {
+    background-color: #c22a1f;
+  }
+}
+
+.customer-head {
+  width: 100%;
+  height: 70px;
+  background-color: #a6ce39;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9998;
+  .header-logo {
+    color: #fff;
+    font-size: 50px;
+    font-family: 'Londrina Shadow', cursive;
+    text-align: center;
+    width: 100%;
+    line-height: 50px;
   }
 }
 
@@ -94,20 +119,6 @@ footer {
       }
     }
   }
-}
-
-#menubar {
-	position: absolute;
-	bottom: 5%;
-	left: 0px;
-	ul {
-	  list-style: none;
-	  padding-left: 0;
-	  margin-left: 45%;
-	  a {
-	    color: lime;
-	  }
-	}
 }
 
 #rogin {
@@ -412,7 +423,7 @@ footer {
 
 
 h2 {
-  margin-top: 50px;
+  margin-top: 80px;
 }
 
 h3 {
