[Fix]top画面矢印カーソル位置変更

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -122,6 +122,8 @@
       </div>
     </div>
   </section>
-  <a href="" class="btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-arrow-up"></i></a>
-  <div class="page-under"></div>
+  <div class="back">
+    <a href="#" class="btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-arrow-up"></i></a>
+  </div>
+    <div class="page-under"></div>
 </div>
