--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -123,7 +123,7 @@
     </div>
   </section>
   <div class="back">
-    <a href="#" class="btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-arrow-up"></i></a>
+    <a href="" class="btn btn--circle btn--circle-c btn--shadow"><i class="fas fa-arrow-up"></i></a>
   </div>
     <div class="page-under"></div>
 </div>
